// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination render simple 1`] = `
<div
  className="css-k008qs"
>
  <div>
    <button
      className="css-1d1m824"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1p2t8zf"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-1k3cu11"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      ...
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-1d1m824"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-kwp0os"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Pagination renders with page size changer 1`] = `
<div
  className="css-k008qs"
>
  <div>
    <button
      className="css-1d1m824"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1p2t8zf"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-1k3cu11"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      ...
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-1d1m824"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-kwp0os"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div
    className="css-1vkrryt"
    onClick={[Function]}
  >
    <button
      className="css-ixus2c"
      type="button"
    >
      10 / page 
      <svg
        className="css-lmyslo"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Pagination renders with page size changer and total 1`] = `
<div
  className="css-k008qs"
>
  <div
    className="css-1dob6jq"
  >
    21
    -
    30
     of 
    300
     items
  </div>
  <div>
    <button
      className="css-1d1m824"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1p2t8zf"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-1k3cu11"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      ...
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-1d1m824"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-kwp0os"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div
    className="css-1vkrryt"
    onClick={[Function]}
  >
    <button
      className="css-ixus2c"
      type="button"
    >
      10 / page 
      <svg
        className="css-lmyslo"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Pagination renders with total 1`] = `
<div
  className="css-k008qs"
>
  <div
    className="css-1dob6jq"
  >
    21
    -
    30
     of 
    300
     items
  </div>
  <div>
    <button
      className="css-1d1m824"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-1p2t8zf"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
  <div>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="css-1k3cu11"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      ...
    </button>
    <button
      className="css-piqsuo"
      onClick={[Function]}
      type="button"
    >
      30
    </button>
  </div>
  <div>
    <button
      className="css-1d1m824"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="css-kwp0os"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`PaginationControlled render simple 1`] = `
<div
  className="css-k008qs"
>
  <button
    className="css-q25dw3"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="css-1p2t8zf"
      viewBox="0 0 14 14"
    >
      <use
        xlinkHref="#chevron-up"
      />
    </svg>
  </button>
  <span
    className="css-u8kjm9"
  >
    3
  </span>
  <button
    className="css-q25dw3"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="css-kwp0os"
      viewBox="0 0 14 14"
    >
      <use
        xlinkHref="#chevron-up"
      />
    </svg>
  </button>
</div>
`;

exports[`PaginationControlled renders with page size changer 1`] = `
<div
  className="css-k008qs"
>
  <button
    className="css-q25dw3"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="css-1p2t8zf"
      viewBox="0 0 14 14"
    >
      <use
        xlinkHref="#chevron-up"
      />
    </svg>
  </button>
  <span
    className="css-u8kjm9"
  >
    3
  </span>
  <button
    className="css-q25dw3"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="css-kwp0os"
      viewBox="0 0 14 14"
    >
      <use
        xlinkHref="#chevron-up"
      />
    </svg>
  </button>
  <div
    className="css-1vkrryt"
    onClick={[Function]}
  >
    <button
      className="css-ypl1wq"
      type="button"
    >
      10 / page 
      <svg
        className="css-lmyslo"
        viewBox="0 0 14 14"
      >
        <use
          xlinkHref="#chevron-up"
        />
      </svg>
    </button>
  </div>
</div>
`;
